# glifos

./: README.md  index.css  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  updates.json
exe/: glifos-setup.msi
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: color-picker.tsx  editor-button.tsx  header.tsx  settings-popup.tsx
src/components/drawer/: drawer-header.component.tsx  drawer.component.tsx  index.ts
src/components/header/: header-note-title.component.tsx  header-window-pin-toggler.component.tsx  header.component.tsx
src/components/note/: note-grid-list-header.component.tsx  note-grid-list.component.tsx  note-preview.component.tsx
src/components/note-editor/: index.ts  note-editor.component.tsx
src/components/note-list/: index.ts  note-list-header.component.tsx  note-list-preview.component.tsx  note-list.component.tsx
src/components/notes-drawer/: index.ts  notes-drawer-button.component.tsx  notes-drawer-header.component.tsx  notes-drawer.component.tsx
src/components/settings-drawer/: index.ts  settings-drawer-button.component.tsx  settings-drawer-header.component copy.tsx  settings-drawer.component.tsx
src/features/: editor.tsx  editors-dropdown.tsx  header.tsx
src/features/editor/: editor-button.tsx  editor-select.tsx  editor.tsx
src/hooks/: use-disable-context-menu.tsx  use-onclick-outside.tsx  use-tauri-events.hook.tsx  use-updater.tsx
src/store/: editor.store.ts  settings.store.ts
src/types/: note.ts
src/utils/: colors.ts
(+4 files in other folders)
